Update implement for pushing v2.0.0-RC4 (Not commit to package push)
[Core] Fixing Plugin loader process making duplicate process